--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ address {
 .header-container {
   display: flex;
 }
-.header-navigatiom {
+.header-navigation {
   display: flex;
   flex-grow: 1;
 }
@@ -69,7 +69,7 @@ address {
 .header-menu-list {
   gap: 40px;
   display: flex;
-  margin-left: 76;
+  margin-left: 76px;
 }
 .header-menu-item {
 }
@@ -109,8 +109,8 @@ address {
 
 .hero {
   background: #2e2f42;
-  padding-top: 192px;
-  padding-bottom: 298px;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 .hero-wrap {
 }
