--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ a {
   text-decoration: none;
   color: currentColor;
 }
+img {
+  display: block;
+}
 address {
   font-style: normal;
 }
@@ -43,6 +46,7 @@ address {
 /*               header                      */
 
 .header {
+  border-bottom: 1px solid #e7e9fc;
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -50,6 +54,7 @@ address {
   display: flex;
 }
 .header-navigation {
+  align-items: center;
   display: flex;
   flex-grow: 1;
 }
@@ -57,6 +62,7 @@ address {
   color: #2e2f42;
 }
 .header-logo {
+  margin-right: 76px;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -69,11 +75,13 @@ address {
 .header-menu-list {
   gap: 40px;
   display: flex;
-  margin-left: 76px;
 }
 .header-menu-item {
 }
 .header-menu-link {
+  padding-top: 24px;
+  padding-bottom: 24px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -127,6 +135,7 @@ address {
   max-width: 496px;
 }
 .hero-btn {
+  min-width: 169px;
   border-radius: 4px;
   padding: 16px 32px;
   font-weight: 500;
@@ -147,19 +156,29 @@ address {
 
 /*               advantages                      */
 
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  border: 0 !important;
+}
 .advantages {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .advantages-title {
 }
 .advantages-list {
-  padding-top: 120px;
-  padding-bottom: 120px;
   display: flex;
   margin: 0 auto;
   gap: 24px;
 }
 .advantages-item {
-  /* width: calc((100% - 3 * 24px) / 4); */
+  width: calc((100% - 3 * 24px) / 4);
 }
 .advantages-item-title {
   font-weight: 500;
