--- a/css/style.css
+++ b/css/style.css
@@ -250,9 +250,11 @@ address {
 /*               portfolio                      */
 
 .portfolio {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .portfolio-title {
-  padding-top: 120px;
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -264,15 +266,20 @@ address {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 60px;
-  padding-bottom: 120px;
-  column-gap: 60px;
+  column-gap: 24px;
+  row-gap: 48px;
   row-gap: 60px;
 }
 .portfolio-item {
-  width: calc((100% - 60px * 2) / 3);
+  width: calc((100% - 48px) / 3);
+  /* width: calc((100% - 60px * 2) / 3); */
   position: relative;
   overflow: hidden;
+}
+.portfolio-categori {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 .portfolio-item::after {
   content: "";
@@ -293,6 +300,7 @@ address {
 .portfolio-images {
 }
 .portfolio-images-title {
+  margin-bottom: 8px;
   padding-left: 16px;
   padding-top: 32px;
   font-weight: 500;
@@ -304,7 +312,6 @@ address {
 .portfolio-images-text {
   padding-bottom: 32px;
   padding-left: 16px;
-  padding-top: 8px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
