--- a/css/style.css
+++ b/css/style.css
@@ -123,9 +123,8 @@ address {
 .hero-wrap {
 }
 .hero-title {
-  padding-bottom: 48px;
   margin: 0 auto;
-  margin-bottom: 49px;
+  margin-bottom: 48px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -147,7 +146,7 @@ address {
   cursor: pointer;
   border: none;
   display: block;
-  margin: 0 auto;
+  margin: auto;
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -239,7 +238,6 @@ address {
   margin-bottom: 8px;
 }
 .team-specifics {
-  padding-top: 8px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -301,8 +299,6 @@ address {
 }
 .portfolio-images-title {
   margin-bottom: 8px;
-  padding-left: 16px;
-  padding-top: 32px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -310,8 +306,6 @@ address {
   color: #2e2f42;
 }
 .portfolio-images-text {
-  padding-bottom: 32px;
-  padding-left: 16px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
